--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,9 +33,9 @@ jobs:
           - ubuntu-24.04
           - macos-15
         sanitize:
-          - []
+          # - []
           - ["asan", "lsan"]
-          - ["ubsan", "tsan"]
+          # - ["ubsan", "tsan"]
         include:
           - build-os: macos-15
             compiler: clang-19
@@ -105,6 +105,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           path: src.pkg
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        with:
+          detached: true
       - name: setup environment
         run: |
           echo "CC=${{ matrix.llvm-bindir }}/clang" >> "${GITHUB_ENV}"
